[package]
name = "sqlite"
version = "0.37.0"
edition = "2021"
license = "AGPL-v3.0"
authors = [
    "Alec Moskvin <alecm@gmx.com>",
    "Angel Leon <gubatron@gmail.com>",
    "Cecile Tonglet <cecile.tonglet@cecton.com>",
    "Daniel Dulaney <ddy@vitronic.com>",
    "Eugenio Tampieri <eugenio@eutampieri.eu>",
    "Ivan Stankovic <pokemon@fly.srk.fer.hr>",
    "Ivan Ukhov <ivan.ukhov@gmail.com>",
    "Jake Kerr <kodafox@gmail.com>",
    "James Haywood <jameshaywood@fastmail.com>",
    "Jayson Reis <santosdosreis@gmail.com>",
    "Jonatan Lemes <jlemes@lenovo.com>",
    "Luna Lux <l.lux@magenta.de>",
    "Pierre Krieger <pierre.krieger1708@gmail.com>",
    "ReactorScram",
    "Sean Klein <seanmarionklein@gmail.com>",
    "Sophie Tauchert <999eagle@999eagle.moe>",
    "Tomoki Aonuma <uasi@uasi.jp>",
    "Vincenzo Palazzo <vincenzopalazzodev@gmail.com>",
    "Yorhel <git@yorhel.nl>",
    "kodeschreiber",
]
description = "The package provides an interface to SQLite."
# documentation = "https://docs.rs/sqlite"
homepage = "https://github.com/ReactorScram/sqlite"
repository = "https://github.com/ReactorScram/sqlite"
readme = "README.md"
categories = ["api-bindings", "database"]
keywords = ["database"]

[features]
default = ["linkage"]
bundled = ["sqlite3-sys/bundled"]
extension = []
encryption = ["sqlite3-sys/encryption"]
linkage = ["sqlite3-sys/linkage"]

[dependencies.sqlite3-sys]
version = "0.18"
default-features = false

[dev-dependencies]
temporary = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
